# smooth7zip

./: .buildinfo  .copier-answers.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .renovaterc.json  CMakeLists.txt  Makefile  README.md  api.html  genindex.html  index.html  mkdocs.yml  objects.inv  search.html  searchindex.js  vcpkg.json
.devcontainer/: devcontainer.json
.doctrees/: api.doctree  environment.pickle  index.doctree
.github/workflows/: cd.yml  ci.yml  codeql.yml  renovate.yml  semantic-release.yml
_sources/: api.md.txt  index.md.txt
cmake/: ConfigureDocs.cmake
cmake/presets/: base.json  default.json
cmake/vcpkg/: vcpkg.toolchain.cmake
cmake/vcpkg/ports/7zip/: 7zip-config.cmake.in  7zip.h  Archive2.def  CMakeLists.txt  add-functions-and-fixes-for-static-link.patch  extras.h  portfile.cmake  vcpkg.json
cmake/vcpkg/ports/safeclib/: CMakeLists.txt  config.h.in  portfile.cmake  safeclib-config.cmake.in  vcpkg.json
cmake/vcpkg/triplets/: x64-linux.cmake  x64-osx.cmake
docs/: conf.py
src/smooth7zip/: CMakeLists.txt
src/smooth7zip/include/: archive.hpp  common.hpp  distribution.hpp  format.hpp  handler.hpp  smooth7zip.hpp
src/smooth7zip/include/smooth7zip/: archive.hpp  common.hpp  distribution.hpp  format.hpp  handler.hpp  smooth7zip.hpp  string_utils.hpp
src/smooth7zip/include/smooth7zip/details/: traits.hpp
src/smooth7zip/src/: archive.cpp  common.cpp  distribution.cpp  format.cpp  handler.cpp
src/smooth7zip/tests/: CMakeLists.txt  default.profraw  temp_dir.hpp  test_7zip.cpp  test_safeclib.cpp  test_smooth7zip.cpp  utils.hpp
